# upstage_ocr

./: .gitignore  main.py  pyproject.toml
output_data/: 02-문과대학-01.국어국문.pdf_parsed.html  IMG_00001.jpeg_parsed.html  IMG_00002.jpeg_parsed.html
